--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -4,8 +4,7 @@
 }
 
 .section-about__list {
-  display: flex;
-  justify-content: space-between;
+  @include flex($display: flex, $justify: space-between);
 }
 
 .section-about__item {
@@ -33,5 +32,6 @@
   text-transform: uppercase;
   color: $primary-white-color;
   transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include transit(transform);
 }
