--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -19,6 +19,7 @@
 .backdrop__modal {
   position: absolute;
   width: 528px;
+
   min-height: 581px;
   top: 50%;
   left: 50%;
@@ -39,18 +40,22 @@
   margin-bottom: 12px;
 }
 .backdrop__button {
-  display: flex;
+  @extend %centeredFlex;
+  @include bordered($color: $modal-button-border);
+  @include transit(fill);
   position: absolute;
   top: 8px;
   right: 8px;
   width: 30px;
   height: 30px;
   border-radius: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  justify-content: center;
-  align-items: center;
   background-color: $primary-white-color;
+
   &:hover {
     fill: $accent-color;
   }
+}
+
+.modal-form__button {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
