--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,18 +3,16 @@
 }
 
 .section-clients__box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %centeredFlex;
 }
 .section-clients__link {
+  @extend %centeredFlex;
   padding: 16px 32px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   border-radius: 4px;
-  border: 1px solid $social-icons-primary;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include bordered($color: $social-icons-primary);
+
+  @include transit(border-color);
   &:not(:last-child) {
     margin-right: 30px;
   }
@@ -24,7 +22,7 @@
   }
   & svg {
     fill: $social-icons-primary;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transit(fill);
   }
   &:hover svg,
   &:focus svg {
