--- a/sass/components/_footer-modal.scss
+++ b/sass/components/_footer-modal.scss
@@ -2,23 +2,20 @@
   margin-left: auto;
 }
 .modal-footer__box {
-  display: flex;
-  justify-content: right;
+  @include flex($display: flex, $justify: right);
 }
 .modal-footer__button {
-  display: flex;
-  align-items: center;
+  @include flex($display: flex, $align: center);
 }
 
 .modal-footer__email {
+  @include bordered($color: $footer-modal-border);
   width: 358px;
   height: 50px;
   padding-left: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
   outline: none;
   background-color: transparent;
+  filter: drop-shadow(0px 4px 4px $footer-modar-filter);
   color: $primary-white-color;
   &::placeholder {
     font-size: 16px;
