--- a/sass/components/_footer-social.scss
+++ b/sass/components/_footer-social.scss
@@ -9,21 +9,19 @@
   margin-right: 10px;
 }
 .footer-social__studio {
+  @extend %centeredFlex;
+  @include transit(background-color);
   width: 44px;
   height: 44px;
   border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: $footer-social-transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     background-color: $accent-color;
   }
   & svg {
     fill: $primary-white-color;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transit(fill);
   }
   &:hover svg,
   &:focus svg {
