--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -12,9 +12,8 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: flex;
-  align-items: center;
+  @include transit(color);
+  @include flex($display: flex, $align: center);
   &:hover,
   &:focus {
     color: $accent-color;
@@ -23,7 +22,7 @@
   & svg {
     margin-right: 10px;
     fill: $secondary-text-color;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transit(fill);
   }
   &:hover svg,
   &:focus svg {
