--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -3,8 +3,7 @@
 }
 
 .main-nav {
-  display: flex;
-  align-items: center;
+  @include flex($display: flex, $align: center);
 }
 .main-nav__list {
   display: flex;
@@ -19,7 +18,8 @@
   cursor: pointer;
   padding: 32px 0;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transit(color);
+
   &::after {
     content: "";
     position: absolute;
