--- a/sass/components/_portfolio-button-list.scss
+++ b/sass/components/_portfolio-button-list.scss
@@ -1,6 +1,5 @@
 .button-list {
-  display: flex;
-  justify-content: center;
+  @include flex($display: flex, $justify: center);
   margin-bottom: 50px;
 }
 
