--- a/sass/components/_portfolio-list-overlay.scss
+++ b/sass/components/_portfolio-list-overlay.scss
@@ -4,9 +4,8 @@
 }
 
 .portfolio-list__overlay {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %centeredFlex;
+  @include transit(transform);
   padding: 0 24px;
   position: absolute;
   top: 0%;
@@ -21,7 +20,6 @@
   letter-spacing: 0.03em;
   color: $primary-white-color;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list__link:hover .portfolio-list__overlay {
   transform: translateY(0);
