--- a/sass/components/_primary-button.scss
+++ b/sass/components/_primary-button.scss
@@ -11,7 +11,8 @@
   display: block;
   margin: 0 auto;
   letter-spacing: 0.06em;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transit(background-color);
+
   &:hover,
   &:focus {
     background-color: $bcgr-btn-hvr;
