--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,19 +1,22 @@
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
 
-$accent-color: #2196f3;
 $primary-white-color: #ffffff;
 $background-main-color: #e5e5e5;
 $background-secondary-color: #f5f4fa;
 $background-hero-color: #2f303a;
+$accent-color: #2196f3;
 $bcgr-btn-hvr: #188ce8;
+$overlay-portfolio: rgba(33, 150, 243, 0.9);
 $border-primary: #eeeeee;
 $border-secondary: #ececec;
 $footer-contact: rgba(255, 255, 255, 0.6);
-$social-icons-primary: rgba(175, 177, 184, 1);
 $footer-social-transparent: rgba(255, 255, 255, 0.1);
+$footer-email-placeholder: rgba(255, 255, 255, 0.6);
+$footer-modal-border: rgba(255, 255, 255, 0.3);
+$footer-modar-filter: rgba(0, 0, 0, 0.15);
+$modal-button-border: rgba(0, 0, 0, 0.1);
 $modal-primary-bgc: rgba(0, 0, 0, 0.2);
-$overlay-portfolio: rgba(33, 150, 243, 0.9);
+$social-icons-primary: rgba(175, 177, 184, 1);
 $about-bgc: rgba(47, 48, 58, 0.8);
 $placeholder-modal: rgba(117, 117, 117, 0.5);
-$footer-email-placeholder: rgba(255, 255, 255, 0.6);
