--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,17 +1,17 @@
-.logo-header,
-.logo-footer {
+.logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
 }
-.logo-footer {
-  color: $primary-white-color;
-}
-.logo-header {
+.logo--header {
   color: $primary-text-color;
   margin-right: 93px;
 }
-.logo {
+
+.logo--footer {
+  color: $primary-white-color;
+}
+.logo--accent {
   color: $accent-color;
 }
