--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -25,3 +25,6 @@
   flex-direction: $direction;
   flex-wrap: $wrap;
 }
+@mixin padding($t: 94px, $r: 0, $b: 94px, $l: 0) {
+  padding: $t $r $b $l;
+}
