--- a/css/main.css
+++ b/css/main.css
@@ -261,8 +261,8 @@ summary {
   display: list-item;
 }
 
-.modal-form__input,
-.modal-form__textarea {
+.form__input,
+.form__textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -275,7 +275,7 @@ summary {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop__button, .modal-form__group-checkbox, .section-benefits__icon, .section-team__social, .section-clients__box, .section-clients__link, .footer-social__studio, .portfolio-list__overlay {
+.backdrop__button, .form__group-checkbox, .section-benefits__icon, .section-team__social, .section-clients__box, .section-clients__link, .footer-social__studio, .portfolio-list__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -285,11 +285,6 @@ summary {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-body {
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  color: #212121;
 }
 
 h1,
@@ -302,6 +297,11 @@ p,
 ul {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  color: #212121;
 }
 
 a {
@@ -322,8 +322,8 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   margin-bottom: 50px;
 }
 
@@ -333,7 +333,13 @@ a {
   padding: 0 15px;
 }
 
+.portfolio-section {
+  padding: 94px 0 94px 0;
+}
+
 .primary-button {
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #ffffff;
   background-color: #2196f3;
   min-width: 200px;
@@ -346,8 +352,6 @@ a {
   display: block;
   margin: 0 auto;
   letter-spacing: 0.06em;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .primary-button:hover, .primary-button:focus {
@@ -388,7 +392,7 @@ a {
   border-radius: 4px;
 }
 
-.head-container {
+.header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -406,29 +410,24 @@ a {
       flex-wrap: nowrap;
 }
 
-.logo-header,
-.logo-footer {
+.logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
 }
 
-.logo-footer {
-  color: #ffffff;
-}
-
-.logo-header {
+.logo--header {
   color: #212121;
   margin-right: 93px;
 }
 
-.logo {
-  color: #2196f3;
+.logo--footer {
+  color: #ffffff;
 }
 
-.logo-header {
-  margin-right: 93px;
+.logo--accent {
+  color: #2196f3;
 }
 
 .main-nav {
@@ -462,7 +461,7 @@ a {
   font-size: 14px;
   line-height: 1.1;
   cursor: pointer;
-  padding: 32px 0;
+  padding: 32px 0 32px 0;
   position: relative;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -576,7 +575,7 @@ a {
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #2f303a;
-  padding: 200px 0;
+  padding: 200px 0 200px 0;
 }
 
 .section-hero__title {
@@ -657,12 +656,7 @@ a {
   fill: #2196f3;
 }
 
-.modal-form__button {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.modal-form {
+.form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -680,12 +674,12 @@ a {
       flex-wrap: nowrap;
 }
 
-.modal-form__group {
+.form__group {
   position: relative;
   margin-bottom: 10px;
 }
 
-.modal-form__label {
+.form__label {
   font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.01em;
@@ -694,63 +688,63 @@ a {
   display: inline-block;
 }
 
-.modal-form__input + svg,
-.modal-form__textarea + svg {
+.form__input + svg,
+.form__textarea + svg {
   -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__input:hover, .modal-form__input:focus,
-.modal-form__textarea:hover,
-.modal-form__textarea:focus {
+.form__input:hover, .form__input:focus,
+.form__textarea:hover,
+.form__textarea:focus {
   border: 1px solid #2196f3;
   border-radius: 4px;
 }
 
-.modal-form__input:hover + svg,
-.modal-form__input:focus + svg,
-.modal-form__textarea:hover + svg,
-.modal-form__textarea:focus + svg {
+.form__input:hover + svg,
+.form__input:focus + svg,
+.form__textarea:hover + svg,
+.form__textarea:focus + svg {
   fill: #2196f3;
 }
 
-.modal-form__textarea {
+.form__textarea {
   height: 120px;
   padding: 12px 16px;
   resize: none;
 }
 
-.modal-form__textarea::-webkit-input-placeholder {
+.form__textarea::-webkit-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form__textarea:-ms-input-placeholder {
+.form__textarea:-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form__textarea::-ms-input-placeholder {
+.form__textarea::-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form__textarea::placeholder {
+.form__textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form__svg {
+.form__svg {
   position: absolute;
   left: 12px;
   top: 33px;
 }
 
-.modal-form__group-comment {
+.form__group-comment {
   margin-bottom: 20px;
 }
 
-.modal-form__group-checkbox {
+.form__group-checkbox {
   margin-bottom: 30px;
 }
 
-.modal-form__agreement {
+.form__agreement {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -768,7 +762,22 @@ a {
       flex-wrap: nowrap;
 }
 
-.modal-form__checkbox {
+.form__icon {
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(../images/icons/icon_checkbox.svg);
+  -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__icon:hover svg {
+  fill: #2196f3;
+}
+
+.form__checkbox {
   position: absolute;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -776,34 +785,26 @@ a {
   opacity: 0;
 }
 
-.modal-form__checkbox:checked + .modal-form__icon {
+.form__checkbox:checked + .form__icon {
   background-image: url(../images/icons/icon_check.svg);
 }
 
-.modal-form__icon {
-  margin-right: 7px;
-  width: 16px;
-  height: 15px;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url(../images/icons/icon_checkbox.svg);
-}
-
-.modal-form__icon:hover svg {
-  fill: #2196f3;
-}
-
-.modal-form__text {
+.form__text {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
 }
 
-.modal-form__link {
+.form__link {
   text-decoration: underline;
   color: #2196f3;
   margin-left: 4px;
+}
+
+.form__button {
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .section-benefits {
@@ -900,7 +901,7 @@ a {
   bottom: 4px;
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px 0;
+  padding: 27px 0 27px 0;
 }
 
 .section-about__description {
@@ -921,7 +922,7 @@ a {
 
 .section-team {
   background-color: #f5f4fa;
-  padding: 94px 0;
+  padding: 94px 0 94px 0;
 }
 
 .section-team__list {
@@ -1031,7 +1032,7 @@ a {
 }
 
 .section-clients {
-  padding: 94px 0;
+  padding: 94px 0 94px 0;
 }
 
 .section-clients__link {
@@ -1064,7 +1065,7 @@ a {
 
 .footer {
   background-color: #2f303a;
-  padding: 60px 0;
+  padding: 60px 0 60px 0;
 }
 
 .footer__container {
@@ -1073,13 +1074,7 @@ a {
   display: flex;
 }
 
-.contacts-box {
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-}
-
-.footer-title {
+.footer__title {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -1087,6 +1082,12 @@ a {
   text-transform: uppercase;
   color: #ffffff;
   padding: 12px 0 20px 0;
+}
+
+.contacts-box {
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
 }
 
 .contacts-box__address {
@@ -1244,10 +1245,6 @@ a {
   margin-left: 12px;
 }
 
-.portfolio-section {
-  padding: 94px 0;
-}
-
 .button-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1337,8 +1334,8 @@ a {
 .portfolio-list__text {
   border: 1px solid #eeeeee;
   border-radius: 4px;
+  padding: 20px 0 20px 0;
   border-top: none;
-  padding: 20px 0;
 }
 
 .portfolio-list__example {
