--- a/sass/components/_common-styles.scss
+++ b/sass/components/_common-styles.scss
@@ -10,8 +10,7 @@ h5,
 h6,
 p,
 ul {
-  margin: 0;
-  padding: 0;
+  @extend %resetMgPd;
 }
 
 a {
@@ -31,12 +30,15 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   margin-bottom: 50px;
 }
 .container {
   margin: 0 auto;
   width: 1200px;
   padding: 0 15px;
+}
+.portfolio-section {
+  @include padding;
 }
