--- a/sass/components/_footer-modal.scss
+++ b/sass/components/_footer-modal.scss
@@ -2,10 +2,10 @@
   margin-left: auto;
 }
 .modal-footer__box {
-  @include flex($display: flex, $justify: right);
+  @include flex($justify: right);
 }
 .modal-footer__button {
-  @include flex($display: flex, $align: center);
+  @include flex($align: center);
 }
 
 .modal-footer__email {
@@ -20,7 +20,6 @@
   &::placeholder {
     font-size: 16px;
     line-height: 1.3;
-
     letter-spacing: 0.03em;
 
     color: $footer-email-placeholder;
