--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   @include bordered($color: $border-secondary);
 }
-.head-container {
-  @include flex($display: flex, $justify: space-between, $align: center);
+.header__container {
+  @include flex($justify: space-between, $align: center);
 }
