--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -1,9 +1,5 @@
-.logo-header {
-  margin-right: 93px;
-}
-
 .main-nav {
-  @include flex($display: flex, $align: center);
+  @include flex($align: center);
 }
 .main-nav__list {
   display: flex;
@@ -16,7 +12,7 @@
   font-size: 14px;
   line-height: 1.1;
   cursor: pointer;
-  padding: 32px 0;
+  @include padding($t: 32px, $b: 32px);
   position: relative;
   @include transit(color);
 
@@ -39,7 +35,7 @@
     content: "";
     background-color: $accent-color;
     transform: scalex(1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transit(transform);
   }
 }
 
