--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -1,6 +1,6 @@
 .section-team {
   background-color: $background-secondary-color;
-  padding: 94px 0;
+  @include padding;
 }
 .section-team__list {
   @include flex($justify: space-between);
@@ -30,7 +30,6 @@
   color: $secondary-text-color;
   font-size: 16px;
   line-height: 1.2;
-
   text-align: center;
   letter-spacing: 0.03em;
 }
