--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,18 +9,17 @@
 @import "./components/logo";
 @import "./components/main-nav";
 @import "./components/header-contacts";
-@import "./components/hero";
+@import "./components/section-hero";
 @import "./components/backdrop";
-@import "./components/backdrop-modal";
-@import "./components/benefits";
-@import "./components/about";
-@import "./components/team";
-@import "./components/clients";
+@import "./components/form-main";
+@import "./components/section-benefits";
+@import "./components/section-about";
+@import "./components/section-team";
+@import "./components/section-clients";
 @import "./components/footer";
 @import "./components/footer-contacts";
 @import "./components/footer-social";
 @import "./components/footer-modal";
-@import "./components/portfolio";
 @import "./components/portfolio-button-list";
 @import "./components/portfolio-list";
 @import "./components/portfolio-list-overlay";
