--- a/sass/components/_section-about.scss
+++ b/sass/components/_section-about.scss
@@ -4,7 +4,7 @@
 }
 
 .section-about__list {
-  @include flex($justify: space-between);
+  @include flex($jc: space-between);
 }
 
 .section-about__item {
