--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -30,7 +30,7 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop__heading {
+.backdrop__header {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
