--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,5 +1,5 @@
 .form {
-  @include flex($direction: column);
+  @include flex($d: column);
 }
 .form__group {
   position: relative;
@@ -16,8 +16,14 @@
 }
 .form__input,
 .form__textarea {
-  @extend %inputTextarea;
-
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  height: 40px;
+  width: 100%;
+  padding: 0 20px 0 42px;
+  outline: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   & + svg {
     @include transit;
   }
@@ -53,7 +59,7 @@
   margin-bottom: 30px;
 }
 .form__agreement {
-  @include flex($align: center);
+  @include flex($ai: center);
 }
 .form__icon {
   margin-right: 7px;
@@ -88,8 +94,4 @@
   text-decoration: underline;
   color: $accent-color;
   margin-left: 4px;
-}
-
-.form__button {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
