--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,12 +4,12 @@
   font-size: 26px;
   line-height: 1.2;
 }
-.logo--header {
+.logo--dark {
   color: $primary-text-color;
   margin-right: 93px;
 }
 
-.logo--footer {
+.logo--light {
   color: $primary-white-color;
 }
 .logo--accent {
