--- a/sass/components/_primary-button.scss
+++ b/sass/components/_primary-button.scss
@@ -12,7 +12,9 @@
   display: block;
   margin: 0 auto;
   letter-spacing: 0.06em;
-
+  &--shadow {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
   &:hover,
   &:focus {
     background-color: $bcgr-btn-hvr;
