--- a/sass/components/_secondary-button.scss
+++ b/sass/components/_secondary-button.scss
@@ -10,13 +10,7 @@
   letter-spacing: 0.03em;
   border-radius: 4px;
   padding: 6px 22px;
-  @include transit(background-color);
-  @include transit(color, 450ms);
-  @include transit(box-shadow);
-
-  // transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  //   color 450ms cubic-bezier(0.4, 0, 0.2, 1),
-  //   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transit;
   &:hover,
   &:focus {
     color: $primary-white-color;
