--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -3,10 +3,10 @@
   @include padding;
 }
 .section-team__list {
-  @include flex($justify: space-between);
+  @include flex($jc: space-between);
 }
 .section-team__box {
-  @include flex($direction: column);
+  @include flex($d: column);
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -32,29 +32,4 @@
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
-}
-.section-team__social-box {
-  @include flex($justify: space-between);
-  width: 100%;
-  padding: 0 32px 30px 32px;
-}
-.section-team__social {
-  @extend %centeredFlex;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background-color: $primary-white-color;
-  @include transit(background-color);
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-  }
-  & svg {
-    fill: $social-icons-primary;
-    @include transit(fill);
-  }
-  &:hover svg,
-  &:focus svg {
-    fill: $primary-white-color;
-  }
 }
