--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./utils/placeholders";
 @import "./utils/mixins";
 @import "./components/common-styles";
+@import "./components/social-list";
 @import "./components/primary-button";
 @import "./components/secondary-button";
 @import "./components/header";
@@ -11,14 +12,13 @@
 @import "./components/header-contacts";
 @import "./components/section-hero";
 @import "./components/backdrop";
-@import "./components/form-main";
+@import "./components/form";
 @import "./components/section-benefits";
 @import "./components/section-about";
 @import "./components/section-team";
 @import "./components/section-clients";
 @import "./components/footer";
 @import "./components/footer-contacts";
-@import "./components/footer-social";
 @import "./components/footer-modal";
 @import "./components/portfolio-button-list";
 @import "./components/portfolio-list";
