--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -12,7 +12,7 @@
   transition: $transitionType $transitionTime cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@mixin flex($jc: falce, $ai: falce, $d: falce, $w: falce) {
+@mixin flex($jc: false, $ai: false, $d: false, $w: false) {
   @extend %d-flex;
   @if ($jc) {
     justify-content: $jc;
